--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,6 +17,7 @@
     "no-underscore-dangle": "off",
     "no-continue": "off",
     "@typescript-eslint/ban-ts-comment": "off",
+    "import/no-extraneous-dependencies":"off",
     "no-console": "off",
     "no-plusplus": "off",
     "import/extensions": [
