--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,6 +16,7 @@
     "no-param-reassign": "off",
     "no-underscore-dangle": "off",
     "no-continue": "off",
+    "no-bitwise": "off",
     "@typescript-eslint/ban-ts-comment": "off",
     "import/no-extraneous-dependencies":"off",
     "no-console": "off",
