devop: commit proto bin

--- a/.github/workflows/update-list.yml
+++ b/.github/workflows/update-list.yml
@@ -19,6 +19,4 @@ jobs:
         with:
           default_author: github_actions
           message: "list updated"
-          add:
-            - "dist/lists/*.json"
-            - "dist/lists/*.bin"
+          add: '["dist/lists/*.json", "dist/lists/*.bin"]'
